fix title overflow in header

--- a/get/header.css
+++ b/get/header.css
@@ -7,7 +7,7 @@ header label { color: rgb(var(--rgb-light)); }
 header .icon { height: 24px; width: 24px; margin: 0; display: block; }
 header>div { display: flex; justify-self: stretch; align-items: center; }
 header>div:first-child { grid-area: 1 / 1 / 2 / 2; justify-content: start; }
-header>div:not(:first-child):not(:last-child) { grid-area: 1 / 2 / 2 / 3; justify-content: center; }
+header>div:not(:first-child):not(:last-child) { grid-area: 1 / 2 / 2 / 3; justify-content: center; overflow: hidden; }
 header>div:last-child { grid-area: 1 / 3 / 2 / 4; justify-content: end; }
 
 @media (max-width: 576px){
